@@ -1,3 +1,8 @@
+2004-06-18  Seth Robertson  <seth@pearl.sysdetect.com>
+
+	* bin/BkReportGen: Fix locking.  Also deal with stale locks while
+	I am at it.
+
 2004-05-17  Seth Robertson  <seth@winwood.sysdetect.com>
 
 	* perl/BkReportGen/helper_simplereports.pl
